small mobile change

--- a/styles/style-mobile.css
+++ b/styles/style-mobile.css
@@ -413,6 +413,10 @@
 
     #modules {
         padding: 5% 0% !important;
+
+        & .left-side{
+            width: 100% !important;
+        }
     }
 
     & #modulesCarousel {
